# system-software

./: sintaticAnalysis.cpp  sintaticAnalysis.hpp
trab1/: .gitignore  CMakeLists.txt  READM.md  README.md  main.cpp  test.txt
trab1/assembler/baseClass/: baseClass.cpp  baseClass.hpp
trab1/assembler/errorAnalysis/: baseAnalyser.hpp  errorService.cpp  errorService.hpp  lexicalAnalysis.cpp  lexicalAnalysis.hpp  semanticAnalysis.cpp  semanticAnalysis.hpp  sintaticAnalysis.cpp  sintaticAnalysis.hpp
trab1/assembler/interfaces/: errorAnalysisInterface.hpp  errorListener.hpp  passage1interface.hpp  passage2interface.hpp  preprocInterface.hpp
trab1/assembler/passage1/: passage1.cpp  passage1.hpp  passage1Service.cpp  passage1Service.hpp
trab1/assembler/passage2/: passage2.cpp  passage2.hpp  passage2Service.cpp  passage2Service.hpp
trab1/assembler/preproc/: macroProcessing.cpp  macroProcessing.hpp  preproc.cpp  preproc.hpp  preprocParsingFunction.cpp  (+3 more)
trab1/montador/: passagem1.hpp  passagem2.cpp  passagem2.hpp  preproc.cpp  preproc.hpp  preprocInterface.hpp
trab1/utils/: fileHandler.cpp  fileHandler.hpp  fileReader.cpp  fileReader.hpp  fileWriter.cpp  fileWriter.hpp  manipulacaoArquivos.cpp  manipulacaoArquivos.hpp  tabelas.cpp  tabelas.hpp  tables.hpp  tablesService.cpp  tablesService.hpp
trab2/: .gitignore  CMakeLists.txt  README.md  main.cpp
trab2/assembly/: char.asm  functions.asm  functions_executable.asm  hex.asm  integer.asm  string.asm
trab2/ligador_ia32/: CMakeLists.txt  elfioWriter.cpp  elfioWriter.hpp  functionsMachineCode.txt  linker.cpp  linker.hpp  main.cpp  utils.cpp  utils.hpp
trab2/tradutor/: teste.asm  teste2.asm  teste2.s
trab2/utils/: tablesService.hpp
(+22 files in other folders)
